# sbp-lang

./: .gitignore  Cargo.toml  LICENSE  README.md  language notes.md
examples/: 01_example.spx  02_example.spx  03_expression_resolution.spx  04_hello_world.spx  05_variables.spx  06_assignments.spx  07_scoped_variables.spx  08_if_conditionals.spx  09_while_loops.spx  10_gcd.spx  11_for_loop.spx  12_gcd_for_loop.spx  13_prime_numbers.spx  14_global_variables.spx  15_function.spx
src/: app.rs  cli.rs  main.rs
src/app/: app.rs  app_compile.rs  app_docs.rs  app_main.rs  compile.rs  compile_file.rs  docs.rs  global_const.rs  repl.rs  utils.rs
src/ast/: ast.rs  ast_printer.rs  ast_tree.rs  expr_ast.rs  stmt_ast.rs
src/interpreter/: environment.rs  globals.rs  impl_expr_visitor.rs  impl_stmt_visitor.rs  interpreter_main.rs  utils.rs
src/lexer/: lexer_main.rs  scanners.rs  utils.rs
src/parser/: ast_printer.rs  error.rs  parser_main.rs  utils.rs
src/token/: token.rs  token_main.rs  token_types.rs
