[package]
name = "splax"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/prashantrahul141/splax"
description = "A learning programming language."
documentation = "https://github.com/prashantrahul141/splax#readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
spdlog-rs = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
strip = "symbols"
